--- a/CommaDelimiter/CommaDelimiter/MainWindow.xaml
+++ b/CommaDelimiter/CommaDelimiter/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CommaDelimiter"
+        DataContext="Models.DisplayViewModel"
         mc:Ignorable="d"
         Title="Comma Delimiter" Height="Auto"  Width="800">
     <Grid>
