starting binding in xaml

--- a/CommaDelimiter/CommaDelimiter/MainWindow.xaml
+++ b/CommaDelimiter/CommaDelimiter/MainWindow.xaml
@@ -18,7 +18,14 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBox TextWrapping="Wrap" AcceptsReturn="True" Grid.Row="0" Grid.Column="0" Height="300" Margin="10" Name="Input"></TextBox>
+        <TextBox TextWrapping="Wrap"
+                 AcceptsReturn="True"
+                 Grid.Row="0"
+                 Grid.Column="0"
+                 Height="300"
+                 Margin="10"
+                 Name="Input"
+                 Text="{Binding Input, Mode=TwoWay}" />
         <TextBox TextWrapping="Wrap" AcceptsReturn="True" Grid.Row="0" Grid.Column="1" Height="300" Margin="10" Name="Output"></TextBox>
         <Button Grid.Row="1" Grid.Column="0" Content="HELLO" Click="Button_Click"></Button>
     </Grid>
